[package]
name = "brainmaster"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
description = "Rust library and TUI for BrainMaster EEG amplifiers (Atlantis, Discovery, Freedom) via USB serial"
keywords = ["eeg", "brainmaster", "neurofeedback", "bci", "serial"]
categories = ["science", "hardware-support"]
authors = ["Eugene Hauptmann <eugene@reactivelions.com>"]
repository = "https://github.com/eugenehp/brainmaster"
homepage = "https://github.com/eugenehp/brainmaster"
readme = "README.md"

[features]
default = []
tui = ["dep:ratatui", "dep:crossterm"]

[[bin]]
name = "brainmaster"
path = "src/bin/tui.rs"
required-features = ["tui"]

[dependencies]
serialport = "4"
log = "0.4"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TUI (optional)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }


